--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="md_theme_errorContainer">#FFDAD6</color>
     <color name="md_theme_onErrorContainer">#93000A</color>
     <color name="md_theme_background">#FBF8FF</color>
+<!--    <color name="md_theme_background">#E0F4FB</color>-->
     <color name="md_theme_onBackground">#1B1B21</color>
     <color name="md_theme_surface">#F5FAFC</color>
     <color name="md_theme_onSurface">#171D1E</color>
@@ -140,4 +141,37 @@
     <color name="md_theme_surfaceContainer_highContrast">#DEE3E5</color>
     <color name="md_theme_surfaceContainerHigh_highContrast">#D0D5D7</color>
     <color name="md_theme_surfaceContainerHighest_highContrast">#C2C7C9</color>
+
+    <!--   Новый фон  -->
+    <color name="focus_fon_F8F9F4">#F8F9F4</color>
+
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="splash_color">#FFD2E149</color>
+    <color name="white_focus">#FDFEFE</color>
+    <color name="white_grey_background_focus">#F6F6F6</color>
+    <color name="grey_text_focus">#979897</color>
+    <color name="grey_disabled_button">#979897</color>
+    <color name="black_focus">#222222</color>
+    <color name="yellow_focus">#F7E221</color>
+    <color name="yellow_green_pressed_button">#D2E149</color>
+    <color name="ripple_color">#9EF4F4C7</color>
+    <color name="focus_red_FF6262">#FF6262</color>
+    <color name="focus_blue_6467FF">#6467FF</color>
+    <color name="grey_focus">#8E9B9A</color>
+    <color name="light_grey_focus">#BFCCCE</color>
+
+    <color name="clicked_label">#6467FF</color>
+    <color name="grey_dialog_background">#99B4B4B1</color>
+    <color name="cursor_color">#634D9C</color>
+    <color name="black_button_pressed">#DD222222</color>
+    <color name="white_onboarding_background">#66F7F7F7</color>
+    <color name="black_00">#000000</color>
+
+    <color name="yellow_focus_start">#E5F83A</color>
+    <color name="yellow_focus_end">#D2E149</color>
+
+    <color name="yellow_green_pressed_button_start">#BEEB44</color>
+    <color name="yellow_green_pressed_button_end">#B6D74C</color>
+    <color name="yellow_green_pressed_card">#E5FBA5</color>
 </resources>
