--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -5,4 +5,64 @@
         <item name="fontFamily">@font/geologica_medium</item>
     </style>
 
+    <style name="TextFieldHintStyle" parent="TextAppearance.Material3.BodySmall">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="ScreenTitleStyle" parent="BaseBodyMedium">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="GeologicaRegular24" parent="TextAppearance.Material3.TitleMedium">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="GeologicaRegular20" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="GeologicaLight14" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_light</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="GeologicaReg14" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="GeologicaReg16" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="GeologicaLight12" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_light</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <!--    Текст кликабельных надписей -->
+    <style name="GeologicaLight12Blue" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_light</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/clickable_text_color</item>
+    </style>
+
+
+    <style name="GeologicaRegular20Grey" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/grey_text_focus</item>
+        <item name="android:lineSpacingMultiplier" format="float">0.5</item>
+    </style>
+
+    <!--    Текст подтверждаемый email -->
+    <style name="GeologicaLight16" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_light</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black_focus</item>
+    </style>
 </resources>
