[+] Added SearchResultsFragment. Added trip_card.xml

--- a/app/src/main/res/navigation/nav_search.xml
+++ b/app/src/main/res/navigation/nav_search.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.al4apps.travelers.presentation.search.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_searchFragment_to_searchResultsFragment"
+            app:destination="@id/searchResultsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchResultsFragment"
+        android:name="com.al4apps.travelers.presentation.search.SearchResultsFragment"
+        android:label="SearchResultsFragment" />
 </navigation>
