--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/search_bg_gradient">
 
     <com.google.android.material.card.MaterialCardView
         style="@style/SearchCardViewStyle"
@@ -110,6 +111,7 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/OutlinedButtonStyle"
+                android:id="@+id/searchButton"
                 android:layout_width="@dimen/button_width_std"
                 android:layout_height="@dimen/button_height"
                 android:layout_gravity="center"
