--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,6 @@
     <color name="md_theme_errorContainer">#FFDAD6</color>
     <color name="md_theme_onErrorContainer">#93000A</color>
     <color name="md_theme_background">#FBF8FF</color>
-<!--    <color name="md_theme_background">#E0F4FB</color>-->
     <color name="md_theme_onBackground">#1B1B21</color>
     <color name="md_theme_surface">#F5FAFC</color>
     <color name="md_theme_onSurface">#171D1E</color>
@@ -142,6 +141,7 @@
     <color name="md_theme_surfaceContainerHigh_highContrast">#D0D5D7</color>
     <color name="md_theme_surfaceContainerHighest_highContrast">#C2C7C9</color>
 
+    <color name="cyan_bg">#90E0EF</color>
     <!--   Новый фон  -->
     <color name="focus_fon_F8F9F4">#F8F9F4</color>
 
@@ -159,6 +159,7 @@
     <color name="focus_red_FF6262">#FF6262</color>
     <color name="focus_blue_6467FF">#6467FF</color>
     <color name="grey_focus">#8E9B9A</color>
+    <color name="grey_dark">#788181</color>
     <color name="light_grey_focus">#BFCCCE</color>
 
     <color name="clicked_label">#6467FF</color>
