--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,10 @@
     <dimen name="edit_text_height">40dp</dimen>
     <dimen name="fab_size_32">32dp</dimen>
     <dimen name="bottom_nav_height">70dp</dimen>
+    <dimen name="trips_toolbar_height">70dp</dimen>
+    <dimen name="trip_card_car_card_size">80dp</dimen>
+    <dimen name="icon_size_16">16dp</dimen>
+    <dimen name="icon_size_20">20dp</dimen>
+    <dimen name="card_trip_ava_size">32dp</dimen>
+    <dimen name="card_trip_ava_corner">20dp</dimen>
 </resources>
