--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,14 +19,32 @@
         <item name="hintTextAppearance">@style/TextFieldHintStyle</item>
     </style>
 
-    <style name="SearchCardViewStyle" parent="Widget.Material3.CardView.Filled">
+    <style name="SearchCardViewStyle" parent="Widget.Material3.CardView.Elevated">
         <item name="cardBackgroundColor">@color/md_theme_background</item>
         <item name="contentPaddingLeft">@dimen/padding_medium</item>
         <item name="contentPaddingRight">@dimen/padding_medium</item>
         <item name="contentPaddingTop">@dimen/padding_large</item>
         <item name="contentPaddingBottom">@dimen/padding_large_32</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="cardCornerRadius">@dimen/card_corner_16</item>
+    </style>
+
+    <style name="TripCardViewStyle" parent="Widget.Material3.CardView.Outlined">
+        <item name="cardBackgroundColor">@color/md_theme_surface</item>
+        <item name="contentPadding">@dimen/padding_medium</item>
         <item name="strokeWidth">1dp</item>
         <item name="cardCornerRadius">@dimen/card_corner_16</item>
+        <item name="elevation">@dimen/card_elevation</item>
+    </style>
+
+    <style name="TripPriceCardViewStyle" parent="Widget.Material3.CardView.Filled">
+        <item name="cardBackgroundColor">@color/md_theme_surface</item>
+        <item name="contentPaddingLeft">@dimen/padding_small_12</item>
+        <item name="contentPaddingRight">@dimen/padding_small</item>
+        <item name="contentPaddingTop">@dimen/padding_extra_small</item>
+        <item name="contentPaddingBottom">@dimen/padding_extra_small</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="cardCornerRadius">@dimen/card_corner_8</item>
     </style>
 
     <style name="FocusMaterialButton" parent="Widget.Material3.Button">
@@ -49,4 +67,6 @@
         <item name="android:paddingVertical">0dp</item>
         <item name="android:textAppearance">@style/GeologicaReg16</item>
     </style>
+
+    <dimen name="card_elevation">4вз</dimen>
 </resources>
