--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -29,13 +29,27 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="TextOnTripsToolbarStyle" parent="GeologicaLight14">
+
+    </style>
+
     <style name="GeologicaReg14" parent="TextAppearance.Material3.BodyMedium">
         <item name="fontFamily">@font/geologica_regular</item>
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="GeologicaMed14" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_medium</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="GeologicaReg16" parent="TextAppearance.Material3.BodyMedium">
         <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="GeologicaMed16" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_bold</item>
         <item name="android:textSize">16sp</item>
     </style>
 
