--- a/app/src/main/res/navigation/nav_search.xml
+++ b/app/src/main/res/navigation/nav_search.xml
@@ -15,5 +15,13 @@
     <fragment
         android:id="@+id/searchResultsFragment"
         android:name="com.al4apps.travelers.presentation.search.SearchResultsFragment"
-        android:label="SearchResultsFragment" />
+        android:label="SearchResultsFragment" >
+        <action
+            android:id="@+id/action_searchResultsFragment_to_tripFragment"
+            app:destination="@id/tripFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/tripFragment"
+        android:name="com.al4apps.travelers.presentation.trip.TripFragment"
+        android:label="TripFragment" />
 </navigation>
