--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -7,7 +7,7 @@
 
     <style name="TextFieldHintStyle" parent="TextAppearance.Material3.BodySmall">
         <item name="fontFamily">@font/geologica_regular</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="ScreenTitleStyle" parent="BaseBodyMedium">
@@ -55,6 +55,11 @@
 
     <style name="GeologicaLight12" parent="TextAppearance.Material3.BodyMedium">
         <item name="fontFamily">@font/geologica_light</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="GeologicaMed12" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_medium</item>
         <item name="android:textSize">12sp</item>
     </style>
 
