[+] Redesigned fragment_trip.xml

--- a/app/src/main/res/layout/address_time_layout.xml
+++ b/app/src/main/res/layout/address_time_layout.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/CardViewOnTripScreenStyle"
     android:id="@+id/addressTimeBlock"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            tools:text="Вторник, 22 апреля"
+            android:textAppearance="@style/GeologicaReg16"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="@dimen/margin_small"
         android:background="@color/light_grey_focus" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -140,11 +153,5 @@
         android:layout_marginStart="@dimen/margin_address_line"
         android:textAppearance="@style/GeologicaLight12"
         tools:text="Центр" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/margin_extra_small"
-        android:background="@color/light_grey_focus" />
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</com.google.android.material.card.MaterialCardView>
