--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -16,136 +16,149 @@
         app:title="Вторник, 22 апреля"
         app:titleTextAppearance="@style/GeologicaReg16" />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/contentLayout"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/carPhotoImageView"
-            android:layout_width="@dimen/trip_screen_car_image_width"
-            android:layout_height="@dimen/trip_screen_car_image_height"
-            android:layout_gravity="center"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/driverInfoLayout"
-            android:layout_width="@dimen/trip_screen_car_image_width"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/contentLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin_small"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/priceCard">
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView"
-                android:layout_width="@dimen/card_trip_ava_size"
-                android:layout_height="@dimen/card_trip_ava_size"
-                app:cardBackgroundColor="@color/md_theme_background"
-                app:cardCornerRadius="@dimen/card_trip_ava_corner"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:strokeWidth="0dp">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/driverImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile_circle" />
-            </com.google.android.material.card.MaterialCardView>
-
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/driverNameText"
-                android:layout_width="wrap_content"
+            <include
+                android:id="@+id/carInfoBlock"
+                layout="@layout/car_info_block"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_small"
-                android:textAppearance="@style/GeologicaLight12"
-                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-                app:layout_constraintStart_toEndOf="@+id/materialCardView"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Искандар" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <include
-            layout="@layout/address_time_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_medium"
-            android:layout_marginTop="@dimen/margin_medium" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/priceCard"
-            style="@style/TripPriceCardViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_medium"
-            android:layout_marginTop="@dimen/margin_medium"
-            app:cardBackgroundColor="@color/md_theme_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/addressTimeBlock">
+                android:layout_marginHorizontal="@dimen/margin_medium" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/driverInfoLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/priceCard">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/trip_screen_1_passanger_text"
-                    android:textAppearance="@style/GeologicaLight12"
-                    app:layout_constraintBottom_toBottomOf="@+id/priceTextView"
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/materialCardView"
+                    android:layout_width="@dimen/card_trip_ava_size"
+                    android:layout_height="@dimen/card_trip_ava_size"
+                    app:cardBackgroundColor="@color/md_theme_background"
+                    app:cardCornerRadius="@dimen/card_trip_ava_corner"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/priceTextView" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/priceTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/GeologicaMed14"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="200 с." />
+                    app:strokeWidth="0dp">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/driverImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile_circle" />
+                </com.google.android.material.card.MaterialCardView>
+
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/driverNameText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/trip_screen_count_text"
-                    android:textAppearance="@style/GeologicaLight12"
-                    app:layout_constraintBottom_toBottomOf="@+id/countTextView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/countTextView" />
-
-                <View
-                    android:id="@+id/priceDivider"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginVertical="@dimen/margin_extra_small"
-                    android:background="@color/light_grey_focus"
-                    app:layout_constraintTop_toBottomOf="@id/priceTextView" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/countTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/GeologicaReg16"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/priceDivider"
-                    tools:text="2" />
-
+                    android:layout_marginStart="@dimen/margin_small"
+                    android:textAppearance="@style/GeologicaReg14"
+                    app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
+                    app:layout_constraintStart_toEndOf="@+id/materialCardView"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Искандар" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <include
+                layout="@layout/address_time_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginHorizontal="@dimen/margin_medium" />
+
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/priceCard"
+                style="@style/CardViewOnTripScreenStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/addressTimeBlock">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/trip_screen_1_passanger_text"
+                        android:textAppearance="@style/GeologicaLight12"
+                        app:layout_constraintBottom_toBottomOf="@+id/priceTextView"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/priceTextView" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/priceTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/GeologicaMed14"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="200 с." />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/trip_screen_count_text"
+                        android:textAppearance="@style/GeologicaLight12"
+                        app:layout_constraintBottom_toBottomOf="@+id/countTextView"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/countTextView" />
+
+                    <View
+                        android:id="@+id/priceDivider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginVertical="@dimen/margin_extra_small"
+                        android:background="@color/light_grey_focus"
+                        app:layout_constraintTop_toBottomOf="@id/priceTextView" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/countTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/GeologicaReg16"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/priceDivider"
+                        tools:text="2" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </ScrollView>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/materialButton"
         style="@style/FilledButtonStyle"
         android:layout_width="@dimen/button_max_width"
         android:layout_height="@dimen/button_height"
