--- a/app/src/main/res/layout/address_time_layout.xml
+++ b/app/src/main/res/layout/address_time_layout.xml
@@ -91,6 +91,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="@dimen/margin_small"
         android:background="@color/light_grey_focus" />
 
