--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -38,6 +38,12 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="GeologicaRegCur14" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_cursive_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="fontStyle">italic</item>
+    </style>
+
     <style name="GeologicaMed14" parent="TextAppearance.Material3.BodyMedium">
         <item name="fontFamily">@font/geologica_medium</item>
         <item name="android:textSize">14sp</item>
