--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,6 +143,7 @@
     <color name="md_theme_surfaceContainerHighest_highContrast">#C2C7C9</color>
 
     <color name="cyan_bg">#90E0EF</color>
+    <color name="green_bg">#9ef01a</color>
     <!--   Новый фон  -->
     <color name="focus_fon_F8F9F4">#F8F9F4</color>
 
