--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -10,9 +10,20 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="TextFieldTextStyle" parent="TextAppearance.Material3.BodyMedium">
+        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="ScreenTitleStyle" parent="BaseBodyMedium">
         <item name="android:textSize">20sp</item>
     </style>
+
+    <style name="MiddleTitleStyle" parent="GeologicaMed16">
+
+    </style>
+
+    <style name="CardMediumTextStyle" parent="GeologicaReg16"/>
 
     <style name="GeologicaRegular24" parent="TextAppearance.Material3.TitleMedium">
         <item name="fontFamily">@font/geologica_regular</item>
@@ -89,5 +100,9 @@
         <item name="fontFamily">@font/geologica_light</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black_focus</item>
+    </style>
+
+    <style name="TripConfirmGreyTextStyle" parent="GeologicaReg16">
+        <item name="android:textColor">@color/grey_focus</item>
     </style>
 </resources>
